# azure-osconfig

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  CopilotLockoutForFailedPasswordAttempts.md  LICENSE.md  README.md  SECURITY.md  STYLE.md  mpi.py  osconfig_desired.json  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  vcpkg.json
src/adapters/: CMakeLists.txt
src/adapters/gc/: Common.h  OSConfig_Proto.schema.mof  ObjectResult.h  codegen.cmd  schema.c
src/adapters/mc/: Baseline.h  CMakeLists.bak  CMakeLists.txt  CMakeLists_ssh.txt  Common.h  LinuxOsConfig.schema.mof  LinuxOsConfigPolicy.mof  LinuxOsConfigResource.c  LinuxOsConfigResource.h  MI.h  MSFT_Credential.h  OMI_BaseResource.h  OsConfig.schema.mof  OsConfigPolicy.mof  OsConfigPolicyFull.mof  OsConfigPolicy_AuditIfNotExists.json  OsConfigPolicy_DeployIfNotExists.json  OsConfigResource.c  OsConfigResource.h  README.md  WMIAdapter.c  codegen.cmd  module.c  schema.c  strings.rc  telemetry_wrapper.cpp
src/adapters/mc2/: Common.h  LinuxOsConfig.schema.mof  LinuxOsConfigPolicy.mof  LinuxOsConfigResource.c  LinuxOsConfigResource.h  MSFT_Credential.h  OMI_BaseResource.h  codegen2.cmd
src/adapters/pnp/: Agent.c  AisUtils.c  CMakeLists.txt  PnpAgent.c  PnpUtils.c  Watcher.c
src/agents/: CMakeLists.txt
src/agents/gc/: CMakeLists.txt  Common.h  MI.h  MSFT_Credential.h  NrpMim.json  OMI_BaseResource.h  OSConfig_Proto_Policy.metaconfig.json  OSConfig_Proto_Policy.mof  OSConfig_PrototypeResource.c  OSConfig_PrototypeResource.h  README.md  module.c  sal.h
src/agents/pnp/: AisUtils.c  CMakeLists.txt  ConfigUtils.c  MpiClient.c  MpiProxy.c  PnpAgent.c  PnpUtils.c  ProxyUtils.c  Watcher.c
src/assessor/: CMakeLists.txt  main.cpp  mof.cpp  mof.hpp
src/cmake/: ExternalTests.cmake.in  GenerateSourceDistribution.cmake
src/cmake/templates/: GenerateSourceDistributionDelegate.cmake.in  osconfig.spec.in  projectname.signatures.json.in  version.h.in
src/cmake/toolchains/: gcc-5-toolchain.cmake  linux-gcc-5.cmake
src/common/: CMakeLists.txt
src/common/ansibleutils/: AnsibleUtils.c  AnsibleUtils.h  CMakeLists.txt  README.md
src/common/asb/: Asb.c  Asb.h  CMakeLists.txt
src/common/base64/: CMakeLists.txt  base64.c  base64.h
src/common/commonutils/: AsbUtils.c  AsbUtils.h  CMakeLists.txt  CommandUtils.c  CommonUtils.c  CommonUtils.cpp  CommonUtils.h  ConfigUtils.c  CrashHandler.c  DaemonUtils.c  DeviceInfoUtils.c  FileUtils.c  Internal.h  MemUtils.c  MountUtils.c  OtherUtils.c  PackageUtils.c  PassUtils.c  PerfUtils.c  ProxyUtils.c  ScopeGuard.h  SocketUtils.c  SshUtils.c  SshUtils.h  TelemetryUtils.c  UrlUtils.c  UserUtils.c  UserUtils.h
src/common/logging/: CMakeLists.txt  Logging.c  Logging.h  Reasons.h
src/common/mpiclient/: CMakeLists.txt  MpiClient.c  MpiClient.h
src/common/parson/: CMakeLists.txt  cgmanifest.json  parson.c
src/common/telemetry/: CMakeLists.txt  Telemetry.c  Telemetry.h  telemetry.c  telemetry.h  telemetry_wrapper.cpp  telemetry_wrapper.h
src/common/telemetryjson/: CMakeLists.txt
src/common/tests/: CMakeLists.txt  CommonUtilsUT.cpp  Helper.c  Helper.h  SshUtilsUT.cpp  TelemetryUT.cpp
src/compliance-engine-assessor/: BenchmarkFormatter.cpp  BenchmarkFormatter.hpp  CMakeLists.txt  CompactListFormatter.cpp  CompactListFormatter.hpp  JsonFormatter.cpp  JsonFormatter.hpp  Main.cpp  MmiFormatter.cpp  MmiFormatter.hpp  Mof.cpp  Mof.hpp  NestedListFormatter.cpp  NestedListFormatter.hpp
src/fuzzer/: CMakeLists.txt  target.cpp
src/fuzzer/seed_corpus/: CharacterFoundInFile.target  CheckLineNotFoundOrCommentedOut.target  CheckLoginUmask.target  CheckMarkedTextNotFoundInFile.target  CheckOrEnsureUsersDontHaveDotFiles.target  CheckPasswordCreationRequirements.target  CheckUserAccountsNotFound.target  ConcatenateStrings.target  ConvertStringToIntegers.target  DuplicateString.target  FindTextInFile.target  GetGitBranchFromJsonConfig.target  GetGitManagementFromJsonConfig.target  GetGitRepositoryUrlFromJsonConfig.target  GetIntegerOptionFromBuffer.target  GetIntegerOptionFromFile.target  GetIotHubProtocolFromJsonConfig.target  GetNumberOfLinesInFile.target  GetReportingIntervalFromJsonConfig.target  GetStringOptionFromFile.target  IsCurrentOs.target  IsDaemonActive.target  IsFullLoggingEnabledInJsonConfig.target  RemoveCharacterFromString.target  RemovePrefixUpTo.target  RemovePrefixUpToString.target  RemoveTrailingBlanks.target  RepairBrokenEolCharactersIfAny.target  SecureSaveToFile.target  SecurityBaselineMmiGet.auditEnsureAllAccountsHavePasswords.target  SecurityBaselineMmiGet.auditEnsureAllBootloadersHavePasswordProtectionEnabled.target  SecurityBaselineMmiGet.auditEnsureAllRsyslogLogFilesAreOwnedBySyslogUser.target  SecurityBaselineMmiGet.auditEnsureAllTelnetdPackagesUninstalled.target  SecurityBaselineMmiGet.auditEnsureAllowGroupsIsConfigured.target  SecurityBaselineMmiGet.auditEnsureAppropriateCiphersForSsh.target  SecurityBaselineMmiGet.auditEnsureAtCronIsRestrictedToAuthorizedUsers.target  SecurityBaselineMmiGet.auditEnsureAuditdInstalled.target  SecurityBaselineMmiGet.auditEnsureAuthenticationRequiredForSingleUserMode.target  SecurityBaselineMmiGet.auditEnsureAutomountingDisabled.target  SecurityBaselineMmiGet.auditEnsureBind9NotInstalled.target  (+187 more)
src/modules/: CMakeLists.txt
src/modules/adhs/: CMakeLists.txt
src/modules/ansible/: CMakeLists.txt
src/modules/commandrunner/: test.json
src/modules/configuration/: CMakeLists.txt  test.json
src/modules/daemonconfiguration/: Cargo.toml
src/modules/deliveryoptimization/: test.json
src/modules/firewall/: test.json
src/modules/hostname/: CMakeLists.txt  test.json
src/modules/inc/: Mmi.h
src/modules/mim/: adhs.json  aptinstall.json  commandrunner.json  (+22 more)
src/platform/: CMakeLists.txt  Log.c  Main.c  ManagementModule.cpp  MmiClient.c  Module.c  ModuleManager.c  ModulesManager.c  ModulesManager.cpp  MpiServer.c  MpiServer.cpp  Platform.c  Server.c
src/ports-overlay/: README.md
src/tests/: CMakeLists.txt
src/triplets/: x64-linux-gcc5.cmake
(+1685 files in other folders)
